<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity"
    android:weightSum="1.0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/clear2"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:id="@+id/del2"/>
        </LinearLayout>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            style="@style/buttons"
            android:id="@+id/sin"
            android:text="@string/sin"/>

        <Button
            style="@style/buttons"
            android:id="@+id/cos"
            android:text="@string/cos"/>

        <Button
            style="@style/buttons"
            android:id="@+id/tan"
            android:text="@string/tan"/>

        <Button
            style="@style/buttons"
            android:id="@+id/i"
            android:text="@string/i"/>

        <Button
            style="@style/buttons"
            android:id="@+id/ln"
            android:text="@string/ln"/>

        <Button
            style="@style/buttons"
            android:id="@+id/log"
            android:text="@string/log"/>

        <Button
            style="@style/buttons"
            android:id="@+id/pi"
            android:text="@string/pi"/>

        <Button
            style="@style/buttons"
            android:id="@+id/e"
            android:text="@string/e"/>

        <Button
            style="@style/buttons"
            android:id="@+id/perc"
            android:text="@string/perc"/>

        <Button
            style="@style/buttons"
            android:id="@+id/exc"
            android:text="@string/exc"/>

        <Button
            style="@style/buttons"
            android:id="@+id/sqrt"
            android:text="@string/sqrt"/>

        <Button
            style="@style/buttons"
            android:id="@+id/pow"
            android:text="@string/pow"/>

        <Button
            style="@style/buttons"
            android:id="@+id/left"
            android:text="@string/left"/>

        <Button
            style="@style/buttons"
            android:id="@+id/right"
            android:text="@string/right"/>

        <Button
            style="@style/buttons"
            android:id="@+id/bl"
            android:text=""/>

        <Button
            style="@style/buttons"
            android:id="@+id/bl2"
            android:text=""/>

    </GridLayout>
</RelativeLayout>
